package main.java.fr.enseeiht.lbs.gameObject.unit.action;

public interface Action {
    void execute(long deltaTime);
}
